<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context=".view.activity.MainActivity">

    <LinearLayout
        android:id="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:weightSum="5">

        <TextView
            android:id="@+id/tabs_first"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/frag_first"
            />
        <TextView
            android:id="@+id/tabs_found"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/main_found"/>

        <TextView
            android:id="@+id/tabs_around"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/main_near"/>
        <TextView
            android:id="@+id/tabs_usual"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/main_usual"/>
        <TextView
            android:id="@+id/tabs_mine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/main_mine"/>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager"
        android:layout_above="@+id/main_tabs"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>


</RelativeLayout>
