<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:clipToPadding="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="#2A2A2A">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:textColor="#fff"
            android:layout_centerInParent="true"
            android:text="@string/add_withhold"/>
        <include layout="@layout/back_img_white"
            android:id="@+id/back"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/board_margin_horizontal"
        android:layout_marginEnd="@dimen/board_margin_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_item_height"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_18sp"
                android:textColor="#000"
                android:text="@string/bank_owner_name"/>

            <EditText
                android:id="@+id/et_withhold_add_name"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/common_gray"
                android:textSize="@dimen/dimens_16sp"
                android:hint="@string/input_real_name"
                android:background="@null"/>
        </LinearLayout>
        <include layout="@layout/split_line_no_margin_common"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_item_height"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_18sp"
                android:textColor="#000"
                android:text="@string/identify_number"/>

            <EditText
                android:id="@+id/et_withhold_add_id"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/common_gray"
                android:textSize="@dimen/dimens_16sp"
                android:hint="@string/input_real_id"
                android:inputType="number"
                android:background="@null"/>
        </LinearLayout>
        <include layout="@layout/split_line_no_margin_common"/>
        <LinearLayout
            android:id="@+id/ll_withhold_card_add_choose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_item_height"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_18sp"
                android:textColor="#000"
                android:text="@string/bank_open"/>

            <TextView
                android:id="@+id/tv_withhold_card_add_bank_name"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/dimens_16sp"
                android:textColor="@color/common_gray"
                android:gravity="center"
                android:hint="@string/choose_bank"
                android:background="@null"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/btn_bg_next_month"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
        <include layout="@layout/split_line_no_margin_common"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_item_height"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_18sp"
                android:textColor="#000"
                android:text="@string/card_number"/>

            <EditText
                android:id="@+id/et_withhold_card_add_bank_num"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/dimens_16sp"
                android:textColor="@color/common_gray"
                android:inputType="number"
                android:hint="@string/input_card_num"
                android:background="@null"/>
        </LinearLayout>
        <include layout="@layout/split_line_no_margin_common"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_item_height"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_18sp"
                android:textColor="#000"
                android:text="@string/reserve_phone"/>

            <EditText
                android:id="@+id/et_withhold_card_add_phone"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/dimens_16sp"
                android:textColor="@color/common_gray"
                android:inputType="number"
                android:hint="@string/input_phone"
                android:background="@null"/>
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common"/>

        <Button
            android:id="@+id/btn_withhold_card_add_finish"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginTop="22dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/confirm_add"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="@dimen/dimens_20sp"
            android:background="@drawable/button_selector" />
    </LinearLayout>


</LinearLayout>